Create navbar & bottom navbar

--- a/index.html
+++ b/index.html
@@ -9,7 +9,88 @@
   <body>
     <div class="nav">
       <div class="nav-top">
-        <div class="more-links"></div>
+        <div class="more-links">
+          <div class="col">
+            <div class="col-title">
+              <p>Awards</p>
+            </div>
+            <div class="link">
+              <a href="#">Winners</a>
+            </div>
+            <div class="link">
+              <a href="#">Site of the Day</a>
+            </div>
+            <div class="link">
+              <a href="#">Nominees</a>
+            </div>
+          </div>
+          <div class="col">
+            <div class="col-title">
+              <p>Inspiration</p>
+            </div>
+            <div class="link">
+              <a href="#">Collections</a>
+            </div>
+            <div class="link">
+              <a href="#">Elements</a>
+            </div>
+            <div class="link">
+              <a href="#">Resources</a>
+            </div>
+          </div>
+          <div class="col">
+            <div class="col-title">
+              <p>Directory</p>
+            </div>
+            <div class="link">
+              <a href="#">Professionals</a>
+            </div>
+            <div class="link">
+              <a href="#">Agencies</a>
+            </div>
+            <div class="link">
+              <a href="#">Freelancers</a>
+            </div>
+          </div>
+          <div class="col">
+            <div class="col-title">
+              <p>Market</p>
+            </div>
+            <div class="link">
+              <a href="#">Jobs</a>
+            </div>
+            <div class="link">
+              <a href="#">New Events</a>
+            </div>
+            <div class="link">
+              <a href="#">Products</a>
+            </div>
+          </div>
+        </div>
+      </div>
+      <div class="nav-bottom">
+        <div class="nav-home">
+          <div class="nav-item" id="toggle">
+            <div class="hamburger">
+              <i class="ph-light ph-list"></i>
+            </div>
+            <p>More</p>
+          </div>
+        </div>
+        <div class="nav-items">
+          <div class="nav-item">
+            <a href="#">Home</a>
+          </div>
+          <div class="nav-item">
+            <a href="#">Nominees</a>
+          </div>
+          <div class="nav-item">
+            <a href="#">Directory</a>
+          </div>
+          <div class="nav-item">
+            <a href="#">Collections</a>
+          </div>
+        </div>
       </div>
     </div>
     <!-- GSAP -->
